--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,15 @@
         <i class="bi bi-bookmark-star"></i>
         Autenticação
       </a>
+      <button 
+      type="submit" 
+      class="btn btn-danger" 
+      (click)="sair()" 
+      style="float: right;"
+      *ngIf="autenticado()">
+      <i class="bi bi-door-open"></i>
+      Sair
+    </button>
     </div>
   </nav>
 <router-outlet></router-outlet>
