correção html login

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -32,7 +32,7 @@
           </span>
           <span
             class="invalid-feedback"
-            *ngIf="form.controls.password.touched && form.controls.password.errors?.minlength"
+            *ngIf="form.controls.senha.touched && form.controls.senha.errors?.minlength"
           >
             A senha deve ter 6 caracteres.
           </span>    
