Criação de filtros na tabela de lençamentos (data e hora); visualização amigável do tipo de lançamento; link na localidade

--- a/src/app/componentes/lancamentos/lancamentos.component.html
+++ b/src/app/componentes/lancamentos/lancamentos.component.html
@@ -1,2 +1,26 @@
-
-<p>lançamento</p>
+<table class="table caption-top">
+    <caption>Lista de lançamentos</caption>
+    <thead>
+      <tr class="table-primary">
+        <th scope="col">ID</th>
+        <th scope="col">Data</th>
+        <th scope="col">Hora</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Localização</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let lancamento of lancamentos">
+        <th scope="row"> {{lancamento.id}}</th>
+        <td>{{ lancamento.data | date:'dd/MM/yyyy' }}</td>
+        <td>{{lancamento.data | hora}}</td>
+        <td>{{lancamento.tipo | tipo}}</td>
+        <td>
+          <a [href]="urlLocalizacao(lancamento.localizacao)"
+          target="_blank">
+            {{lancamento.localizacao}}
+          </a>
+         </td>
+      </tr>
+    </tbody>
+  </table>
