data e hora atual na tela de lançamentos

--- a/src/app/componentes/lancamentos/lancamentos.component.html
+++ b/src/app/componentes/lancamentos/lancamentos.component.html
@@ -1,3 +1,8 @@
+<div style="text-align: right">
+  <h3>Data e hora atual</h3>
+  <p>{{dataHoraAtual}}</p>
+</div>
+
 <table class="table caption-top">
     <caption>Lista de lançamentos</caption>
     <thead>
