Ação do botão e ngOnDestroy implementado

--- a/src/app/componentes/lancamentos/lancamentos.component.html
+++ b/src/app/componentes/lancamentos/lancamentos.component.html
@@ -2,7 +2,7 @@
   <h3>Data e hora atual</h3>
   <p>{{dataHoraAtual}}</p>
 </div>
-
+<p><button (click)="atualizarDataHora()">Atualizar data</button></p>
 <table class="table caption-top">
     <caption>Lista de lançamentos</caption>
     <thead>
