Hora atualizando todo segundo

--- a/src/app/componentes/lancamentos/lancamentos.component.html
+++ b/src/app/componentes/lancamentos/lancamentos.component.html
@@ -1,6 +1,7 @@
 <div style="text-align: right">
   <h3>Data e hora atual</h3>
-  <p>{{dataHoraAtual}}</p>
+  <p>{{dataTempoReal}}</p>
+  <p>Data e hora: {{ dataHoraAtual }}</p>
 </div>
 <p><button (click)="atualizarDataHora()">Atualizar data</button></p>
 <table class="table caption-top">
