Botão de download pdf implementado

--- a/src/app/componentes/lancamentos/lancamentos.component.html
+++ b/src/app/componentes/lancamentos/lancamentos.component.html
@@ -8,6 +8,10 @@
     Download CSV
     <i class="bi-file-earmark-excel"></i>
   </button>
+  <button (click)="downloadPDF()" type="button" class="btn btn-outline-primary">
+    Download PDF
+    <i class="bi-file-earmark-pdf"></i>
+  </button>
 </p>
 <h2>Lista de lançamentos</h2>
 <table class="table caption-top">
